fixed zoom in zoom out distortion

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,12 +30,26 @@ $vending-machine-bg-color: rgb(204, 201, 201);
   height: 85vh;
   border: 1px solid $border-color-black;
   border-radius: $border-radius;
+  overflow: auto;
+
   .products {
     width: 60%;
     padding: 1rem;
-  }
-  .single-product {
-    border-radius: $border-radius;
+    overflow: auto;
+    border-bottom: 1px solid $border-color-black;
+    .products-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 1rem;
+      height: 100%;
+      justify-items: center;
+      .single-product {
+        padding: 0.5rem;
+        width: 8rem;
+        border: 1px solid $border-color-black;
+        border-radius: $border-radius;
+      }
+    }
   }
   .digital-display-and-buttons {
     width: 40%;
@@ -43,6 +57,8 @@ $vending-machine-bg-color: rgb(204, 201, 201);
     display: grid;
     grid-template-rows: 1fr 3fr;
     padding: 1rem;
+    border-bottom: 1px solid $border-color-black;
+    overflow: auto;
     .digital-display {
       width: 100%;
       display: flex;
@@ -82,6 +98,8 @@ $vending-machine-bg-color: rgb(204, 201, 201);
     padding: 1rem;
     gap: 2rem 0;
     flex-direction: column;
+    border-bottom: 1px solid $border-color-black;
+    overflow: auto;
     .util-buttons {
       button {
         @include button();
@@ -91,23 +109,9 @@ $vending-machine-bg-color: rgb(204, 201, 201);
     .temperature-energy-container {
       margin-top: 2rem;
       display: flex;
-      align-items: center;
-      gap: 0 5rem;
+      flex-direction: column;
+      gap: 2rem 5rem;
     }
-  }
-}
-
-/* Product */
-.products-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
-  height: 100%;
-  justify-items: center;
-  .single-product {
-    padding: 0.5rem;
-    width: 8rem;
-    border: 1px solid $border-color-black;
   }
 }
 
